--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "axios": "^1.4.0",
     "dayjs": "^1.11.7",
+    "install": "^0.13.0",
     "jwt-decode": "^3.1.2",
     "jwt-encode": "^1.0.1",
     "miragejs": "^0.1.47",
     "mockman-js": "^1.1.5",
+    "npm": "^9.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.11.1",
