--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "npm": "^9.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-router": "^6.11.1",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
